--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #00fdc2;
     color: #333;
 }
 
 :root {
-    --main-color: #16b93a;
+    --main-color: #9816b9;
 }
 
 header, section, footer {
@@ -30,22 +30,30 @@ h2 {
 }
 
 section {
-    background-color: #fff;
+    background-color: #ff8f2d;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     margin-bottom: 20px;
 }
 
 footer {
     text-align: center;
     padding: 20px;
-    background-color: var(--main-color);
-    color: #fff;
+    background-color: rgb(217, 70, 217);
+    color: #6eff3a;
+}
+
+footer a{
+    color: wheat;
+}
+
+footer a:hover{
+    color: #f4f4f4;
 }
 
 #idiomas {
-    background-color: #f4f4f4;
+    background-color: #ff8f2d;
     padding: 20px;
 }
 
@@ -63,7 +71,7 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     width: 180px;
     text-align: center;
 }
@@ -75,7 +83,7 @@ footer {
 
 
 #informatica {
-    background-color: #f4f4f4;
+    background-color: #ff8f2d;
     padding: 20px;
 }
 
@@ -93,7 +101,7 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     width: 180px;
     text-align: center;
 }
@@ -104,7 +112,7 @@ footer {
 }
 
 #experiencia {
-    background-color: #f4f4f4;
+    background-color: #ff8f2d;
     padding: 20px;
 }
 
@@ -122,7 +130,7 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     width: 250px; /* Ajusta según necesidad */
     text-align: center;
 }
@@ -133,7 +141,7 @@ footer {
 }
 
 #formacion-reglada {
-    background-color: #f4f4f4;
+    background-color: #ff8f2d;
     padding: 20px;
 }
 
@@ -151,7 +159,7 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     width: 250px; /* Ajuste según necesidad */
     text-align: center;
 }
@@ -180,7 +188,7 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
     width: 250px; /* Ajuste según necesidad */
     text-align: center;
 }
